tests/loops/valid/empty_expression.amu
s32 main() {
    s32 i = 3;
    ; 
    for (s32 i = 0; i < 10; i = i + 1)
        ;
    return i;
}