tests/loops/invalid/syntax_err_too_few_for_clauses.amu
main() : s32 {
    for (i:s32 = 2; i < 3)
        3;
    return 0;
}